objects/Kitchen_Sink__c.object
<CustomObject>
    <fields>
        <fullName>Account_Filter__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account!Filter</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Name</field>
                <operation>startsWith</operation>
                <value>U</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Kitchen Sinks (Account!Filter)</relationshipLabel>
        <relationshipName>Kitchen_Sinks1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Kitchen Sinks</relationshipLabel>
        <relationshipName>Kitchen_Sinks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Checkbox__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Checkbox</description>
        <inlineHelpText>Checkbox</inlineHelpText>
        <label>Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Account_Filter__c</field>
                <operation>notEqual</operation>
                <value>t</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Kitchen Sinks</relationshipLabel>
        <relationshipName>Kitchen_Sinks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <defaultValue>12.22</defaultValue>
        <description>Currency</description>
        <inlineHelpText>Currency</inlineHelpText>
        <label>Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_Time__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>Date/Time</description>
        <inlineHelpText>Date/Time</inlineHelpText>
        <label>Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>Date</description>
        <inlineHelpText>Date</inlineHelpText>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Datetime_Formula__c</fullName>
        <formula>if( (NOW() - LastModifiedDate) * 86400 &gt; 30, &quot;changed over 1 min ago&quot;, &quot;changed 1 min ago&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Datetime Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ext_Id__c</fullName>
        <externalId>true</externalId>
        <label>Ext Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>F_rmula__c</fullName>
        <description>IF(false &lt;&gt; true, &quot;&lt;A&gt;&quot;, &quot;&lt;B&gt;&quot;)</description>
        <formula>IF(false &lt;&gt; true, &quot;&lt;A&gt;&quot;, &quot;&lt;B&gt;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>IF(false &lt;&gt; true, &quot;&lt;A&gt;&quot;, &quot;&lt;B&gt;&quot;)

WHAT!</inlineHelpText>
        <label>Fórmula&lt;1&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Icon__c</fullName>
        <formula>IMAGE(&quot;https://www.copa.do/bundles/front/img/att-icon.png&quot;, &quot;Green&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percent__c</fullName>
        <defaultValue>5</defaultValue>
        <description>Percent</description>
        <inlineHelpText>Percent</inlineHelpText>
        <label>Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pick__c</fullName>
        <description>Picklist Global</description>
        <inlineHelpText>Picklist Global</inlineHelpText>
        <label>Picklist Global</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Numbers</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist2__c</fullName>
        <description>presever the same name as the other field</description>
        <label>Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>aáa</fullName>
                </value>
                <value>
                    <fullName>uúu</fullName>
                </value>
                <value>
                    <fullName>aaa</fullName>
                    <isActive>false</isActive>
                    <label>aaa</label>
                </value>
                <value>
                    <fullName>bb</fullName>
                    <isActive>false</isActive>
                    <label>bb</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_Multi_Global__c</fullName>
        <description>Picklist Multi Global</description>
        <inlineHelpText>Picklist Multi Global</inlineHelpText>
        <label>Picklist Multi Global</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Numbers</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist__c</fullName>
        <description>Picklist</description>
        <inlineHelpText>Picklist</inlineHelpText>
        <label>Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>one</fullName>
                    <default>true</default>
                    <label>one</label>
                </value>
                <value>
                    <fullName>two</fullName>
                </value>
                <value>
                    <fullName>three</fullName>
                </value>
                <value>
                    <fullName>four</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ritch_Text__c</fullName>
        <description>Ritch Text</description>
        <inlineHelpText>Ritch Text</inlineHelpText>
        <label>Ritch Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <defaultValue>&apos;nr+1@copa.do&apos;</defaultValue>
        <description>xxx8</description>
        <inlineHelpText>8</inlineHelpText>
        <label>Short Descriptión</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <description>new Time field</description>
        <label>Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>rich_text__c</fullName>
        <label>rich text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Kitchen Sink</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Kitchen Sink Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Kitchen Sinks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Formula2</fullName>
        <active>true</active>
        <description>F★rmula&lt;2&gt;</description>
        <errorConditionFormula>false &lt;&gt; false</errorConditionFormula>
        <errorMessage>false &lt;&gt; false MUST be FALSE★</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Formula3</fullName>
        <active>true</active>
        <description>F★rmula&lt;2&gt;</description>
        <errorConditionFormula>false &lt;&gt; false</errorConditionFormula>
        <errorMessage>false &lt;&gt; false MUST be FALSE★</errorMessage>
    </validationRules>
</CustomObject>